@@ -1,4 +1,5 @@
 1.17 -> 2.0:
+    - devzero2000: add test3 to the unit test, add color-tests automake option
     - devzero2000: add tdict to the unit test: augment make check with some tdict tests
     - devzero2000: add test2 to the unit test: augment make check with some test2 tests
     - devzero2000: fix: add missing automake per target test* LDFLAGS
